--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-<div id="barline" style="width: 0%">
+<div class="meter">
+    <span id="barline" style="width: 0%"></span>
 </div>
 <br>
 <hr>
 <div>
     <button id="demo">Cargar en función customizada</button>
     <button id="stop">Interrumpir la carga</button>
+    <button id="block">Esperando terminar</button>
 </div>
 <script src="js/main.js"></script>
 </body>
