--- a/index.html
+++ b/index.html
@@ -4,16 +4,34 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-<div class="meter">
-    <span id="barline" style="width: 0%"></span>
-</div>
-<br>
-<hr>
-<div>
-    <button id="demo">Cargar en función customizada</button>
-    <button id="stop">Interrumpir la carga</button>
-    <button id="block">Esperando terminar</button>
-</div>
+<template id="progress-bar-template">
+    <style>
+        .progress {
+            width: 100%;
+            height: 50px;
+        }
+
+        .progress-wrap {
+            background: #ddd;
+            margin: 20px 0;
+            overflow: hidden;
+            position: relative;
+        }
+
+        .progress-bar {
+            background: #f80;
+            left: 0;
+            position: absolute;
+            top: 0;
+        }
+
+    </style>
+    <!-- Change the below data attribute to play -->
+    <div class="progress-wrap progress">
+        <div class="progress-bar progress" style="width: 0px; height: 50px"></div>
+    </div>
+</template>
+<progress-bar id="custom-bar-element" progress="0"></progress-bar>
 <script src="js/main.js"></script>
 </body>
 </html>
